2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <label>Transit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>