2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Transit_Type2__c.field-meta.xml
<CustomField>
    <fullName>Transit_Type2__c</fullName>
    <label>Transit Type (NF)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Transit (SG, HK, CN)</fullName>
            </value>
            <value>
                <fullName>Transit (Rest of Asia/Australia)</fullName>
            </value>
            <value>
                <fullName>Transit (Rest of World)</fullName>
            </value>
            <value>
                <fullName>Auction House Internal Transit (SG, HK, CN)</fullName>
            </value>
            <value>
                <fullName>Auction House Transit (Rest of Asia/Australia)</fullName>
            </value>
            <value>
                <fullName>Auction House Transit (Rest of World)</fullName>
            </value>
            <value>
                <fullName>Auction House - Storage</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
                <isActive>false</isActive>
                <label>Storage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>