2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Transport_Sea__c.field-meta.xml
<CustomField>
    <fullName>Transport_Sea__c</fullName>
    <label>Transport-FCL (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>