2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/unique__c.field-meta.xml
<CustomField>
    <fullName>unique__c</fullName>
    <label>unique</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>