2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Vendor_s_Invoice_Air__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s_Invoice_Air__c</fullName>
    <formula>Transport_Air__c +  Other_Charges_Air__c + Air_Freight__c +  ISS_FSC_SGD_Air__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor&apos;s Invoice-Air (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>