2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Vendor_s_Invoice_LCL_SGD__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s_Invoice_LCL_SGD__c</fullName>
    <formula>LCL_Freight__c + Transport_LCL__c + Other_Charges_LCL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor&apos;s Invoice-LCL (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>