2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Vendor_s_Invoice_Sea__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s_Invoice_Sea__c</fullName>
    <formula>Transport_Sea__c  +  Other_Charges_Sea__c + FCL_Freight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor&apos;s Invoice-FCL(SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>