2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Vessel_Voyage__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Voyage__c</fullName>
    <label>Vessel/Voyage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>