2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <label>Weight (kg)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>