2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/X21_Jan_Install_MP_GW__c.field-meta.xml
<CustomField>
    <fullName>X21_Jan_Install_MP_GW__c</fullName>
    <label>21 Jan - Install MP (GW)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>