2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/X21_Jan_Timing__c.field-meta.xml
<CustomField>
    <fullName>X21_Jan_Timing__c</fullName>
    <label>21 Jan - Timing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>