2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/X22_Jan_Timing__c.field-meta.xml
<CustomField>
    <fullName>X22_Jan_Timing__c</fullName>
    <label>22 Jan - Timing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>