2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/X23_Jan_Install_MP_SW__c.field-meta.xml
<CustomField>
    <fullName>X23_Jan_Install_MP_SW__c</fullName>
    <label>23 Jan - Install MP (SW/GW)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>