2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/X23_Jan_Timing__c.field-meta.xml
<CustomField>
    <fullName>X23_Jan_Timing__c</fullName>
    <label>23 Jan - Timing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>