2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/fields/X28_Jan_De_Install_MP_SW__c.field-meta.xml
<CustomField>
    <fullName>X28_Jan_De_Install_MP_SW__c</fullName>
    <label>28 Jan - De-Install MP (SW/GW)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>