2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/recordTypes/HK_Import.recordType-meta.xml
<RecordType>
    <fullName>HK_Import</fullName>
    <active>true</active>
    <label>HK Import</label>
</RecordType>