2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/recordTypes/HK_Import_Export.recordType-meta.xml
<RecordType>
    <fullName>HK_Import_Export</fullName>
    <active>true</active>
    <label>HK Import &amp; Export</label>
</RecordType>