2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/validationRules/CheckCSInitials.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCSInitials</fullName>
    <active>true</active>
    <description>check if CS initials is chosen</description>
    <errorConditionFormula>AND (ISBLANK(CsinchargeOpp__c),
(Opportunity__r.RecordTypeId=&quot;012200000008bhJ,01220000000JTDC,01220000000JTCx,01220000000JTD7,01220000000JTD2&quot;),
DATEVALUE(Opportunity__r.CreatedDate) &gt; DATE (2017,01,23))</errorConditionFormula>
    <errorMessage>ERROR - Go back to Opportunity Page and select CS in charge of Job</errorMessage>
</ValidationRule>