2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/validationRules/CheckOppDate_B4_Create_Job_Ref.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOppDate_B4_Create_Job_Ref</fullName>
    <active>false</active>
    <description>Check Opp date_B4_Create_Job_Ref</description>
    <errorConditionFormula>AND( 
JROppRecordType__c  &lt;&gt; &quot;ArtmoveHK&quot;,
DATEVALUE(Opportunity__r.CreatedDate) &lt;= DATEVALUE(&quot;2014-12-31&quot;))</errorConditionFormula>
    <errorMessage>This Opportunity was created last year. Please CLONE this opportunity first before creating a new Job reference.</errorMessage>
</ValidationRule>