2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/validationRules/CheckOppStage.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOppStage</fullName>
    <active>true</active>
    <description>check if Opp Stage is Closed Won</description>
    <errorConditionFormula>OppStage__c &lt;&gt; &quot;Closed Won&quot;</errorConditionFormula>
    <errorMessage>Your Opportunity need to be at Stage = Closed Won before you can create and save a Job Reference.</errorMessage>
</ValidationRule>