2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/validationRules/ChkOppIFLastYr.validationRule-meta.xml
<ValidationRule>
    <fullName>ChkOppIFLastYr</fullName>
    <active>true</active>
    <description>ChkOppIFLastYr</description>
    <errorConditionFormula>Opportunity__r.LastYROpps__c  = TRUE</errorConditionFormula>
    <errorMessage>This Opportunity was created last year. Please CLONE this opportunity first before creating a new Job No.</errorMessage>
</ValidationRule>