2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/validationRules/Job_Completion_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Completion_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(Job_Completion_Date__c) - TODAY() &gt; 0</errorConditionFormula>
    <errorMessage>Job completion date is for Actual Date that job is completed.
It is not a forecast. Clear the field in order to save.</errorMessage>
</ValidationRule>