2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/validationRules/Prevent_Duplicate_Job_Ref_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Job_Ref_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Name==VLOOKUP(
$ObjectType.Job_Reference__c.Fields.Name,
$ObjectType.Job_Reference__c.Fields.Name,
Name),Id!=VLOOKUP(
$ObjectType.Job_Reference__c.Fields.Id,
$ObjectType.Job_Reference__c.Fields.Name,
Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Duplicate Job Reference Number</errorMessage>
</ValidationRule>