2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MAWB__c</columns>
    <columns>OBL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MAWB__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>OBL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>