2nd training/Community/Community/Community1/force-app/main/default/objects/Job_Reference__c/listViews/New_this_week.listView-meta.xml
<ListView>
    <fullName>New_this_week</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New this week</label>
    <language>en_US</language>
</ListView>